--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/prismjs": "^1.26.5",
     "@vueuse/core": "^14.0.0",
     "codemirror": "^6.0.2",
+    "jalutils": "^0.1.1",
     "marked": "^17.0.0",
     "prismjs": "^1.30.0",
     "tailwindcss": "^4.1.17",
